# imbundle_embed

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp  modules.cpp  readme.md  requirements.txt
.github/workflows/: cmake-single-platform.yml
cmake/: imgui_bundle_bindings_static.cmake
